megamenu: fix scrollbar issue

--- a/packages/daisyui/src/components/megamenu.css
+++ b/packages/daisyui/src/components/megamenu.css
@@ -1,6 +1,6 @@
 .megamenu {
   @layer daisyui.l1.l2.l3 {
-    @apply relative flex items-center;
+    @apply relative flex items-center overflow-x-hidden;
     width: unset;
     background-color: transparent;
     border-radius: calc(var(--radius-field) + var(--border));
